kubernetes/Cluster-Int-Temp/deployments/home-automation/zwave-js-ui/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: zwave-js-ui
    namespace: home-automation
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:/6gOa+yfCeoRN5A0mukU4qOS4rD0ThgEtg==,iv:bDO3NbqwhtyjYEeMq2RApAkfcgSybUQfF8yYBK6j8Vc=,tag:zTS2Pf0HaUHUOPAyqIQEEg==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:NpRVoxw9auh58Xo=,iv:l1IkkNKcVXJcydiGMWrXvsYH5HlPO/EuaVh6w6hS1CQ=,tag:2VqIXdj3XGejSnSoAnCOYA==,type:str]
              port: ENC[AES256_GCM,data:1aLrgQ==,iv:TTBqGq8VcocgqWOln4SdTEIiZlwQumI8t30gApmIp6s=,tag:MjZTWGKCHf0k1TU7OkqNMA==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:xmrUVS33JGyQWisKq9k=,iv:Uq80J0YkHn00VC0hbOUv1cyYF5903Tf/0iJzT0gBpZo=,tag:WHd22zAUpVhFYIoXUtvOgg==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwSzlMZzhVeVRkWW5sQ0VB
[...]
            IoOMbo3xDKNNZJm4FSb4foYcN7rgu4RMrD4ESnw63c4mlQli1uK2KQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-13T21:38:59Z"
    mac: ENC[AES256_GCM,data:+qqz4YDo1jlFEaAKLQv2cRUXtRLgP4EW983Za3dwOEA2g+T9905av2Hf2XQBuZS1HDb1KQWKdM2F1OFmN2Fk31Ip2WLP5u52LzgEC6f9xu+ZbDU8k5fcJHv0Ra7Q9aBoM2+UUSoGG0Gqn1CTLuPJ6TS24UDRGjvsPD6Itgj87A4=,iv:6qpjS4o6Ng3SiYssbkz6ie4jf236IKbTIgS6I3gpk0I=,tag:Jgq0HVlfEH62YimX5KTGUg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
